--- a/MedicalLinkUpdate/MedicalLinkUpdate.csproj
+++ b/MedicalLinkUpdate/MedicalLinkUpdate.csproj
@@ -49,6 +49,7 @@
     </Reference>
     <Reference Include="Npgsql">
       <HintPath>..\MedicalLink\Library\Npgsql.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
@@ -105,6 +106,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="App.config" />
+    <None Include="AppSettings.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
