--- a/MedicalLink/MedicalLink.csproj
+++ b/MedicalLink/MedicalLink.csproj
@@ -613,6 +613,7 @@
     <Compile Include="ClassCommon\classUserDepartment.cs" />
     <Compile Include="ClassCommon\reportExcelDTO.cs" />
     <Compile Include="ClassCommon\classBenhVienDTO.cs" />
+    <Compile Include="ClassCommon\SoXetNghiem_ChiSoDTO.cs" />
     <Compile Include="ClassCommon\TienBNPhaiThanhToanDTO.cs" />
     <Compile Include="ClassCommon\TinhBHYTThanhToanDTO.cs" />
     <Compile Include="ClassCommon\ToolsOtherListDTO.cs" />
